# plover_thsteno

./: .gitignore  MANIFEST.in  setup.cfg
plover_thsteno/: __init__.py  system.py
plover_thsteno/dicts/: test.py  thsteno_base.py  thsteno_fingerspelling.py  thsteno_main.json
