[metadata]
name = plover_thsteno
keywords = plover plover_plugin

[options]
zip_safe = True
include_package_data = True
setup_requires =
  setuptools>=30.3.0
install_requires =
  plover>=4.0.0.dev8
packages =
  plover_thsteno

[options.entry_points]
plover.system =
    Thai Steno alpha = plover_thsteno.system
